# ducklake-sdk

./: .envrc  .gitattributes  .gitignore  .lefthook.yaml  .prettierrc  .readthedocs.yml  .taplo.toml  .typos.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  pixi.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.agents/skills/new-spec-version/: SKILL.md
.github/: CONTRIBUTING.md  codecov.yml  dependabot.yml  release-drafter.yml
.github/instructions/: python.instructions.md  rust.instructions.md
.github/workflows/: build.yml  chore.yml  ci.yml  copilot-setup-steps.yml  release-drafter.yml
crates/ducklake/: Cargo.toml  README.md
crates/ducklake-macros/: Cargo.toml  README.md
crates/ducklake-macros/src/: ducklake_table.rs  lib.rs  visibility.rs
crates/ducklake/src/: ducklake.rs  error.rs  lib.rs  options.rs  table.rs
crates/ducklake/src/caches/: catalog.rs  metadata.rs  mod.rs  snapshot.rs  table_stats.rs
crates/ducklake/src/catalog/: AGENTS.md  arena.rs  load.rs  mod.rs  refs.rs
crates/ducklake/src/catalog/typedefs/: columns.rs  mod.rs  partition.rs  schema.rs  state.rs  table.rs
crates/ducklake/src/catalog/views/: column.rs  mod.rs  schema.rs  table.rs
crates/ducklake/src/db/: AGENTS.md  mod.rs  sea_query_ext.rs
crates/ducklake/src/db/arrow/: mod.rs
crates/ducklake/src/db/arrow/decoding/: factory.rs  mod.rs  nested.rs  primitive.rs
crates/ducklake/src/db/arrow/encoding/: factory.rs  mod.rs  nested.rs  primitive.rs
crates/ducklake/src/db/dialects/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/ducklake/src/db/types/: chrono.rs  mod.rs  uuid.rs
crates/ducklake/src/io/: mod.rs  path.rs
crates/ducklake/src/io/arrow/: aggregate.rs  conversion.rs  mod.rs  statistics.rs
crates/ducklake/src/io/parquet/: mod.rs  statistics.rs
crates/ducklake/src/maintenance/: cleanup_old_files.rs  delete_orphaned_files.rs  expire_snapshots.rs  mod.rs  utils.rs
crates/ducklake/src/primitives/: borrowed.rs  diff_iterator.rs  lazy.rs  mod.rs  types.rs
crates/ducklake/src/scan/: mod.rs  parsing.rs  queries.rs
crates/ducklake/src/spec/: entities.rs  init.rs  metadata.rs  mod.rs  query_clauses.rs
crates/ducklake/src/spec/literals/: date.rs  mod.rs  nested.rs  primitive.rs
crates/ducklake/src/spec/migrations/: mod.rs  v0_2.rs  v0_3.rs  v0_4.rs  v1_0.rs
crates/ducklake/src/transaction/: commit_state.rs  mod.rs  schema.rs  table.rs  typedefs.rs
crates/ducklake/src/transaction/changes/: applied_change.rs  change.rs  mod.rs
crates/ducklake/src/transaction/executors/: mod.rs  schema.rs  table_meta.rs  table_write.rs
crates/ducklake/src/typedefs/: mod.rs  name.rs  partition.rs  tag.rs
crates/ducklake/src/typedefs/data/: mod.rs  scan.rs  statistics.rs  write.rs
crates/ducklake/src/typedefs/schema/: arrow.rs  column.rs  dtype.rs  mod.rs
crates/ducklake/src/typedefs/value/: format.rs  mod.rs  parse.rs
crates/ducklake/src/utils/: filepath_generator.rs  identifier.rs  mod.rs
dev/: gcs-proxy.nginx.conf
ducklake-python/: AGENTS.md  Cargo.toml  pyproject.toml
ducklake-python/docs/: conf.py  index.md
ducklake-python/docs/_templates/autosummary/: datatype.rst  error.rst
ducklake-python/docs/api/: index.rst
ducklake-python/docs/api/connect/: index.rst
ducklake-python/docs/api/duckdb/: index.rst
ducklake-python/docs/api/ducklake/: index.rst
ducklake-python/docs/api/errors/: index.rst
ducklake-python/docs/api/polars/: index.rst
ducklake-python/docs/api/table/: index.rst
ducklake-python/docs/api/transaction/: index.rst
ducklake-python/docs/api/types/: index.rst
ducklake-python/docs/guides/: development.md  index.md  quickstart.md
ducklake-python/ducklake/: __init__.py  _compat.py  _native.pyi  _storage.py  connect.py  ducklake.py  exceptions.py  table.py  transaction.py  typedefs.py
ducklake-python/ducklake/duckdb/: utils.py
ducklake-python/ducklake/polars/: __init__.py  scan.py  sink.py
ducklake-python/src/: ducklake.rs  error.rs  lib.rs  table.rs  transaction.rs
ducklake-python/src/conversion/: column.rs  column_default.rs  column_name.rs  column_stats.rs  data_type.rs  mod.rs  nominal_enums.rs  partition.rs  scan.rs  snapshot.rs  table_metadata.rs  table_name.rs  tag.rs  value.rs  write_data_file.rs
ducklake-python/src/utils/: arrow.rs  filepath_generator.rs  mod.rs  runtime.rs
tests/: _testutils.py  conftest.py
tests/_snapshots/: make_snapshot.sh
tests/_snapshots/init/: mysql.sql  postgres.sql  sqlite.sql
tests/_snapshots/v0.1/catalogs/: mysql.sql  postgres.sql  sqlite.sql
tests/_snapshots/v0.2/catalogs/: mysql.sql  postgres.sql  sqlite.sql
tests/_snapshots/v0.3/catalogs/: mysql.sql  postgres.sql  sqlite.sql
tests/_snapshots/v0.4/catalogs/: mysql.sql  postgres.sql  sqlite.sql
tests/differential/: conftest.py  test_connect.py  test_maintenance.py  test_table.py  test_transaction.py  test_write.py
tests/unit/: conftest.py  test_exceptions.py  test_minimal.py  test_repr.py  test_storage_options.py  test_typedefs.py
tests/unit/ducklake/: test_connect.py  test_maintenance.py  test_schema.py  test_sql.py  test_tables.py  test_time_travel.py
tests/unit/maintenance/: test_cleanup_old_files.py  test_delete_orphaned_files.py  test_dispatch_duckdb.py  test_expire_snapshots.py
tests/unit/polars/: test_scan.py  test_write.py
tests/unit/table/: test_alter.py  test_create_delete.py  test_default.py  test_inlining.py  test_maintenance.py  test_metadata.py  test_read_write.py  test_write.py
tests/unit/transaction/: test_alter.py  test_conflict_resolution.py  test_schema.py  test_table.py  test_write.py
