[workspace]
members = ["crates/ducklake", "crates/ducklake-macros", "ducklake-python"]
resolver = "2"

[workspace.dependencies]
arrow-arith = "59.0"
arrow-array = "59.0"
arrow-schema = "59.0"
async-recursion = "1.1"
chrono = "0.4"
futures = "0.3"
heck = "0.5"
hex = "0.4"
indexmap = "2.14"
itertools = "0.15"
object_store = "0.14"
parquet = "59.0"
percent-encoding = "2.3"
proc-macro2 = "1.0"
pyo3 = "0.28"
pyo3-arrow = { version = "0.18", default-features = false }
quote = "1.0"
regex = "1.12"
rstest = "0.26"
rust_decimal = "1.42"
sea-query = "1.0"
sea-query-sqlx = "0.9"
sqlx = "0.9"
strum = "0.28"
syn = "2.0"
thiserror = "2.0"
tokio = "1.50"
url = "2.5"
uuid = "1.23"

ducklake = { path = "crates/ducklake", version = "0.0.0" }
ducklake-macros = { path = "crates/ducklake-macros", version = "0.0.0" }

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
unreachable_pub = "deny"
