[package]
edition = "2024"
name = "ducklake-python"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "ducklake_python"

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
ducklake = { workspace = true, features = ["aws", "gcp", "mysql", "postgres", "python", "sqlite"] }
indexmap = { workspace = true }
parquet = { workspace = true }
pyo3 = { workspace = true, features = ["abi3-py310", "chrono", "extension-module"] }
pyo3-arrow = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
uuid = { workspace = true }
