[build-system]
build-backend = "maturin"
requires = ["maturin>=1.7,<2.0"]

[project]
authors = [{ name = "Oliver Borchert", email = "me@borchero.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  # Conditional
  'typing-extensions; python_version <= "3.10"',
]
description = "Python SDK to interact with DuckLake."
license = { file = "LICENSE" }
name = "ducklake-sdk"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.0"

[project.optional-dependencies]
arrow = ["duckdb", "pyarrow"]
polars = ["polars>=1.40"]
sqlalchemy = ["sqlalchemy"]

[project.urls]
Documentation = "https://ducklake-sdk.readthedocs.io/"
Repository = "https://github.com/borchero/ducklake-sdk"

[tool.maturin]
module-name = "ducklake._native"
