[package]
authors = ["Oliver Borchert <me@borchero.com>"]
description = "Macros for the Rust SDK for DuckLake."
edition = "2024"
license = "MIT"
name = "ducklake-macros"
readme = "README.md"
repository = "https://github.com/borchero/ducklake-sdk"
version = "0.0.0"

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
